
Changes file for atech-tools
==================================================
See Authors for more description on developers
--------------------------------------------------

0.8.1 - Andy [2.2.2016]
- graph v2 (preversion)
- refacoring some classes (graphs, guis) for TableLayout
- added: ColorUtils
- upgrade implementation
- fixing float parsing (trial for Ascensia Meter)


0.7.16 - Andy [11.12.2015]
- upgrade implementation: (WIP)
    - move server code
    - move client code and start implementation
    - WS for upgrade moved to other project


0.7.15 - Andy [24.10]
- reafctoring about window
- added AppPluginDefinition for use in Plugins/App for defining about window and special data (definitions/handlers)
- added ATDataAccessAPDAbstract for use with AppPluginDefintion

0.7.14 - Andy [for GGC 0.6.2]  [12.10.2015]
   - ATDataAccessAbstract renamed method createListOfString to
   - removed log from ATDataAccessLMAbstract
   - AbstractConfigunationManager ready
   - ATechDate changes
   - some refactorings of ATDataAccessAbstract
   - Graph changes: GraphUtil
   - Plugins: Client, Server: Transfering data
   - Printing


0.7.13 - Andy [for GGC 0.6.1] [7.10.2015]
   - changes to BitUtils
   - JTableWithToolTip + Model
   - working on SelectableInterface (+V2), Selector dialog
   - ZeroLayout2 added (started working on it)
   - added methods for string/stringbuilder concatenation
   - changes after ATDataAccess refactoring
   - changes to ATechDate object (added enum and some refactoring)


0.7.12 - Andy [for GGC 0.6]
   - changes to BitUtils (refactoring is still in progress)

0.7.11
   - fixed loading of Language Data (Locale was not read)
   - fixed CodeEnumWithTranslation, CodeEnum, TimeZoneUtils
   - fixing I18nControl
   - temporary codeminders hidapi added
   - Update Client/Server
   - Startup changes
   - Minor changes here and there

0.7.10
   - printing: new class for icepdf to display better window

0.7.9
   - printing icepdf changes

0.7.8